Bug 511078 - Exact keyword matches for apps are outscored by inexact fuzzy matches
Summary: Exact keyword matches for apps are outscored by inexact fuzzy matches
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.5.0
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 511143 511314 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-10-25 09:41 UTC by jaburjak
Modified: 2026-02-11 15:24 UTC (History)
17 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.2
Sentry Crash Report:


Attachments
Search results for "term" (229.94 KB, image/png)
2025-10-26 22:42 UTC, Prajna Sariputra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jaburjak 2025-10-25 09:41:49 UTC
SUMMARY
After updating Plasma to 6.5.0, the order of results in Krunner has changed for worse. For example, when typing “code”, the first result is “Discover”, while “Visual Studio Code” is second. After years of being able to just type “code” and press Enter to launch VS Code, now I launch Discover instead. Before the 6.5.0 update, VS Code was (in my opinion correctly) first in the list.

The same happens when searching for “gimp” – “LibreOffice Impress” comes up before GIMP itself. “GIMP” is the first value in the Keywords property in GIMP’s .desktop file. When do `grep -i gimp libreoffice-impress.desktop`, there are no matches at all.

STEPS TO REPRODUCE
1. Update Plasma to 6.5.0.
2. Have both Discover and VS Code installed.
3. Open Krunner and search for “code”.

OBSERVED RESULT
Discover comes up as the first search result.

EXPECTED RESULT
VS Code should come up before Discover.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux, kernel 6.17.4-zen2-1-zen
KDE Plasma Version: 6.5.0
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Comment 1 Lenzoid 2025-10-25 11:59:42 UTC
It's true, some example I could reproduce this with in 6.5.0 and 6.6 dev (git-master)

- “gimp” – “LibreOffice Impress” before GIMP
- "notific" brings KCalc (I guess matching "scientific" from its GenericName) before Notifications

Seems there is some fuzzy search algo at play here but it doesn't particularly sort results that meaningfully. It should prioritize exact matches in application title (Name value in the desktop file) first.
Comment 2 Prajna Sariputra 2025-10-26 22:23:30 UTC
*** Bug 511143 has been marked as a duplicate of this bug. ***
Comment 3 Prajna Sariputra 2025-10-26 22:42:13 UTC
Created attachment 186210 [details]
Search results for "term"

The fuzzy searching is quite horrific in my case where I have *many* applications installed (due to having the `kde-applications-meta` package among others), so the search results in some cases end up being almost comical.

For example, this is what I get if I type "cmd" with 6.5.0 (which in 6.4.5 just brings up Konsole since its .desktop file has "cmd" as a keyword, and none of these other apps have those three letters in that order anywhere in their respective names, descriptions or .desktop files):
- Picmi (Logic Game, from KDE)
- Visual Studio Code (VSCode, I made this .desktop file using KMenuEdit)
- KSpaceDuel (Space Arcade Game, from KDE)
- CMake (Cross-platform buildsystem, part of the `cmake` package on Arch Linux)
- Qrca (Barcode Scanner, from KDE)
- Bomber (Arcade Bombing Game, from KDE)
- Kate (Advanced Text Editor, from KDE)
- KAppTemplate (App Code Template Generator, from KDE)
- Audex (CDDA Ripping, from KDE)
- Konsole (the actual result I want, so far down KRunner doesn't even show it in the list lmao)

Searching for "ter" or even "term" to get Konsole is even worse, I actually have to either scroll or make Kickoff/the application launcher taller to find Konsole, with these apps coming up for "term" (see the attached screenshot for proof):
- Steam
- System Monitor
- Welcome Center
- System Settings
- Info Center
- ghostwriter
- Help Center
- KSystemLog
- KAppTemplate
- PIM Data Exporter
- ISO Image Writer
- LibreOffice Writer
- Konsole (finally!)

I've also found a couple of posts/threads online talking about this issue as well:
- https://discuss.kde.org/t/toggle-to-disable-fuzzy-search/40925
- https://www.reddit.com/r/kde/comments/1og5xy7/search_priority_is_being_weird_now/
Comment 5 Nate Graham 2025-10-27 19:25:15 UTC
It's not fixed with that; I can still reproduce the issue and related variants with that commit on my system.

The problem is that "cmd" and "gimp" are keywords which don't appear to be scored highly enough for exact matches.
Comment 6 Nate Graham 2025-10-27 19:26:38 UTC
There are other distinct issues here too; let's not overload the bug report for them.
Comment 7 Harald Sitter 2025-10-28 00:35:54 UTC
I don't see how to reconcile 'gimp' vs 'impress' with the requirement that 'code' should match 'visual studio code' rather than 'kate' (which has a keyword 'code').

gimp and code both being perfect keyword matches for their respective input.
Comment 8 Méven 2025-10-28 09:52:51 UTC
There are other cases:

teams vs steam

https://discuss.kde.org/t/toggle-to-disable-fuzzy-search/40925/11?u=meven
Comment 9 Nate Graham 2025-10-29 16:52:40 UTC
(In reply to Harald Sitter from comment #7)
> I don't see how to reconcile 'gimp' vs 'impress' with the requirement that
> 'code' should match 'visual studio code' rather than 'kate' (which has a
> keyword 'code').
> 
> gimp and code both being perfect keyword matches for their respective input.

Even if both apps have "code" in their keywords, one also has it in the name. That should count for something, too.
Comment 10 Harald Sitter 2025-10-29 18:21:44 UTC
I think vscode doesn't have the keyword code. If it had vscode would score higher by virtue of having both entries score. As it stands we have:

vscode
- partial match on name

kate
- exact match on keyword

impress
- partial match on name

gimp
- exact match on keyword
Comment 11 jaburjak 2025-10-29 19:14:26 UTC
(In reply to Harald Sitter from comment #10)
> vscode
> - partial match on name

VS Code has exact match on a word in the name (the full name of the entry is „Visual Studio Code“).

I think it could work with the following order: exact match of full name > exact match of one or more words in name > exact match in keywords > partial match in name > partial match in keywords.
Comment 12 Nate Graham 2025-10-29 20:31:29 UTC
*** Bug 511314 has been marked as a duplicate of this bug. ***
Comment 13 LGF 2025-10-29 22:31:00 UTC
Maybe it would help if, instead of just a scoring system for correct matches, things with inexact matches get a penalty per mismatching letter? eg LibreOffice IMPpress has no G when searching for Gimp so it gets a -10 score?
Comment 14 Bug Janitor Service 2025-10-30 03:44:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5950
Comment 15 Prajna Sariputra 2025-10-30 06:25:58 UTC
VSCode's upstream .desktop file indeed doesn't have the "code" keyword (https://github.com/microsoft/vscode/blob/main/resources/linux/code.desktop), but after adjusting the .desktop file I have for it to match upstream and patching my system (running Plasma 6.5.1) with https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5950 it now appears above Discover and Kate when searching for "code", and it also fixes the "gimp", "cmd" and "term" cases for me.

Searching for "ter", while it doesn't put Konsole on top it does put a bunch of apps which have "ter" in the name above Konsole (like LibreOffice Writer, Info Center, Help Center etc) which I think makes sense at least (certainly better than Steam showing up lol).

Searching for "notific" brings up KCalc first, but I suspect that's just because the only "Notifications" thing I have is from System Settings, and that's a different plugin ranked below Applications in the search plugins list in my case so that makes sense to me as well.

The only issue I can find with the search results at this point is that if I search for "vsco" I end up with only Discover as the result and VSCode not showing up at all despite the "vscode" keyword, but I'm guessing this is intentional to avoid minor partial keyword matches flooding the results since applications can have lots of keywords, and editing the .desktop file to have the string "VSCode" in the GenericName section is enough to make it appear above Discover so it's a simple enough fix on my end, plus I don't think I've seen anyone complain about searching for "vsco" being broken anyway lol.

All in all, I'm quite happy with the search results after that patch, thanks for the hard work!
Comment 16 Harald Sitter 2025-10-31 17:21:17 UTC
Git commit e7b91993dfff0214669b7f4f802c5c4ee5b4a30f by Harald Sitter.
Committed on 31/10/2025 at 12:33.
Pushed by sitter into branch 'master'.

servicerunner: aggressively expand scoring system

the previous bonus system wasn't producing very good results when
perfect matches were involved. so, we now track perfect matches (along
with the other properties of a match -- for future use) which allows us
to more aggressively outline the base score we expect a good match to
have with regards to relative order.

at its heart this functions mostly the same. matching produces
scorecards, scorecards are aggregated into weightedcards and those are
then computed. the main difference is a new perfectMatchScore logic. if
a match was perfect (required no substitutions) then we give it serious
base line value relative to their weight. only after that we run the
previous fuzzy scoring logic relying on bitap and levenshtein scores.

the base score makes sure we have accurate ordering of perfect matches
while the fuzzy score makes sure matches within the same base score are
then sorted according to how fuzzy or distant they are
Related: bug 511235, bug 511237

A  +19   -0    runners/services/autotests/fixtures/org.gimp.GIMP.desktop
M  +2    -0    runners/services/autotests/fixtures/org.kde.konsole.desktop
A  +24   -0    runners/services/autotests/fixtures/org.libreoffice.LibreOffice.impress.desktop
M  +44   -2    runners/services/autotests/servicerunnertest.cpp
M  +35   -17   runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e7b91993dfff0214669b7f4f802c5c4ee5b4a30f
Comment 17 Harald Sitter 2025-11-04 01:39:30 UTC
Git commit 7b2c33d3fd275e891f237c37b5140a16aefa6292 by Harald Sitter.
Committed on 04/11/2025 at 01:39.
Pushed by sitter into branch 'Plasma/6.5'.

servicerunner: aggressively expand scoring system

the previous bonus system wasn't producing very good results when
perfect matches were involved. so, we now track perfect matches (along
with the other properties of a match -- for future use) which allows us
to more aggressively outline the base score we expect a good match to
have with regards to relative order.

at its heart this functions mostly the same. matching produces
scorecards, scorecards are aggregated into weightedcards and those are
then computed. the main difference is a new perfectMatchScore logic. if
a match was perfect (required no substitutions) then we give it serious
base line value relative to their weight. only after that we run the
previous fuzzy scoring logic relying on bitap and levenshtein scores.

the base score makes sure we have accurate ordering of perfect matches
while the fuzzy score makes sure matches within the same base score are
then sorted according to how fuzzy or distant they are
Related: bug 511235, bug 511237
(cherry picked from commit e7b91993dfff0214669b7f4f802c5c4ee5b4a30f)

A  +19   -0    runners/services/autotests/fixtures/org.gimp.GIMP.desktop
M  +2    -0    runners/services/autotests/fixtures/org.kde.konsole.desktop
A  +24   -0    runners/services/autotests/fixtures/org.libreoffice.LibreOffice.impress.desktop
M  +44   -2    runners/services/autotests/servicerunnertest.cpp
M  +35   -17   runners/services/servicerunner.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/7b2c33d3fd275e891f237c37b5140a16aefa6292
Comment 18 luk 2025-11-09 10:52:36 UTC
I'd add that krunner fuzzy search wasn't ideal long before 6.5.0
I'm on 6.4.1 and have the same problem with visual studio code, mouse, any app...  (and it's like this for a long time)
Comment 19 jaburjak 2025-11-09 15:02:57 UTC
I have updated to Plasma 6.5.2 and can confirm that the bug is fixed. Both Visual Studio Code and GIMP are now scored first when searching for “code” and “gimp”. Thanks to everyone involved!
Comment 20 TraceyC 2025-11-10 18:35:38 UTC
(In reply to jaburjak from comment #19)
> I have updated to Plasma 6.5.2 and can confirm that the bug is fixed. Both
> Visual Studio Code and GIMP are now scored first when searching for “code”
> and “gimp”. Thanks to everyone involved!

Thanks for confirming this fixes things on your system!
Comment 21 apfelkuchen-public 2025-12-05 16:19:09 UTC
(In reply to TraceyC from comment #20)
> Thanks for confirming this fixes things on your system!

Unfortunately this still happens on 6.5.3 for me. 
For example a search for "lac" will bring up Alacritty before LACT, and "gim" will bring up vim, qimgv, libre office impress, divinity original sin, and only then gimp. 
Multiple other users confirmed having these issues on 6.5.3 when I brought it up in some linux spaces.
Comment 22 luk 2025-12-05 17:40:18 UTC
It's better than before, definitely :)  however maybe it doesn't work as other would expect? it matches part of the words.

however, if I put 'gimp' : "gnu image manipulation" is first, "libreoffice impress" second, "SimpleScreenRecorder" third.
for "tor":
"webstorm" first
"calculator"
"epic game store"
"midnight commander"   ??
"bridge constructor portal"
and .... "Tor Browser" -  6th !

another thing,  maybe another bug ??   If I enter "tor" fast,  apps are scrolled down !! to a middle .... so no APPS are visible anyway!! 
look here https://i.imgur.com/jS4GW64.png


If I type it a bit slower, so the apps are updated as I write, then I stay at the top the screen.
Comment 23 Nate Graham 2025-12-05 17:50:15 UTC
"gim" isn't an exact keyword match. "gimp" is, and that does work to bring up the app.

If you want "gim" to bring up GNU Image Manipulation program, then it's not an exact keyword match you're looking for, but rather a partial substring match anchored to the beginning.

Which would be a separate thing, and require a new bug report.
Comment 24 Connor Chang 2025-12-05 17:52:49 UTC
I think Bug 512400 addresses the issues described here.
Comment 25 luk 2026-01-14 21:02:05 UTC
I use Operating System: Kubuntu 25.10
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.20.0
Qt Version: 6.9.2
Kernel Version: 6.17.0-8-generic (64-bit)
Graphics Platform: Wayland


and exact keyword matches are again "broken"  ?
When I enter "tor" in my launcher,  first is WebStorm, second: Tor Browser.
When I enter "info": "TexInfo" is first, "Info system" second.
(probably I could find some other examples)
Comment 26 jaburjak 2026-01-15 11:51:36 UTC
(In reply to luk from comment #25)
> I use Operating System: Kubuntu 25.10
> KDE Plasma Version: 6.5.4
> KDE Frameworks Version: 6.20.0
> Qt Version: 6.9.2
> Kernel Version: 6.17.0-8-generic (64-bit)
> Graphics Platform: Wayland
> 
> 
> and exact keyword matches are again "broken"  ?
> When I enter "tor" in my launcher,  first is WebStorm, second: Tor Browser.
> When I enter "info": "TexInfo" is first, "Info system" second.
> (probably I could find some other examples)

Please try to upgrade to the latest Plasma version. I’ve experienced a few regressions as well (for example “XML Author” being scored higher than “Thunderbird” for search query “th”), but they appear to be resolved in Plasma 6.5.5.
Comment 27 Arniiiii 2026-02-11 10:12:23 UTC
I do not feel that current algo works good.

I have foot terminals which reports tmux's session name, windows name etc.

So, I have windows like:

tmux donald@gentoo job_recs:4:nvim:1
tmux donald@gentoo job_jssdk:1:nvim:1
tmux donald@gentoo job_amp:1:nvim:1

       If I type `job` it shows all of them.
but if I type `joba` I expect to get the one that has `job_amp`, but instead I get no window in result at all.


Operating System: Gentoo Linux 2.18
KDE Plasma Version: 6.5.5
KDE Frameworks Version: 6.22.0
Qt Version: 6.10.1
Kernel Version: 6.12.63-gentoo-dist (64-bit)
Graphics Platform: Wayland
Processors: 12 × 13th Gen Intel® Core™ i5-13420H
Memory: 32 GiB of RAM (31.0 GiB usable)
Graphics Processor: Intel® Graphics
Comment 28 jaburjak 2026-02-11 12:47:12 UTC
(In reply to Arniiiii from comment #27)
>        If I type `job` it shows all of them.
> but if I type `joba` I expect to get the one that has `job_amp`, but instead
> I get no window in result at all.

I believe this would be a separate issue, since “joba” is not an exact match. The issue discussed here has been resolved and I don’t notice any regressions on Plasma 6.5.5.
Comment 29 Nate Graham 2026-02-11 15:24:11 UTC
Indeed; please open new bug reports for any remaining issues or sources of awkwardness that you're seeing. Thank you!